# voicerec

./: .gitignore  .gitmodules  README.md  app.py  main.py  ml.py  pyproject.toml
pretrained_models/IdentityEncoder-677243260058dc75b961703db2ea0590/byol/: hyperparams.yaml  model.pt
website/: account.html  account.js  auth.html  index.html  script.js  style.css
