[project]
name = "voicerec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "huggingface-hub>=0.34.4",
    "litestar[standard]>=2.17.0",
    "nnaudio>=0.3.3",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchcodec>=0.6.0",
    "torchvision>=0.23.0",
]
